DigicielFull/force-app/main/default/objects/CCMI__Timesheet__c/fields/CCMI__End__c.field-meta.xml
<CustomField>
    <fullName>CCMI__End__c</fullName>
    <description>The end of the Timesheet is 7 days (including the start date) after the start of the Timesheet</description>
    <formula>CCMI__Start__c + 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The end of the Timesheet is 7 days (including the start date) after the start of the Timesheet</inlineHelpText>
    <label>End</label>
    <type>Date</type>
</CustomField>