DigicielFull/force-app/main/default/objects/CCMI__Timesheet__c/fields/CCMI__Start__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Start__c</fullName>
    <description>The date the Timesheet entries can begin</description>
    <inlineHelpText>The first day of the Timesheet</inlineHelpText>
    <label>Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>