DigicielFull/force-app/main/default/objects/CCMI__Timesheet__c/fields/CCMI__Worked_Hours__c.field-meta.xml
<CustomField>
    <fullName>CCMI__Worked_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Entered Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>